# disnake-template

./: .gitignore  README.md  pyproject.toml
src/: bot.py  config.py
src/cogs/commands/: owner.py
src/cogs/core/: events.py
