[tool.poetry]
name = "disnake-template"
version = "0.0.0"
description = "A disnake template I will be using mainly for commissions"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.5.1"
arrow = "^1.2.2"
aiosqlite = "^0.17.0"
pydantic = "^1.9.1"
aiohttp = "^3.8.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
